--- a/ProjektNYYYZealand/ProjektNYYYZealand.csproj
+++ b/ProjektNYYYZealand/ProjektNYYYZealand.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.31" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Billede\" />
+  </ItemGroup>
+
 </Project>
